@@ -6,6 +6,7 @@ CHANGES IN CUPS V1.4.3
 	- SECURITY: The scheduler could try responding on a closed client
 	  connection, leading to a crash (STR #3200)
 	- Localization updates (STR #3352, STR #3422)
+	- The USB backend did not work on Solaris (STR #3423)
 	- cupstestppd didn't catch problems with JobPatchFile definitions
 	  (STR #3421)
 	- The socket backend could crash if a SNMP string had a negative length.
